# mangafox

./: main.py  pyproject.toml
app/: constants.py  db.py
auth/: routes.py  schema.py
manga/: routes.py  schema.py
static/: styles.css
templates/: anime.jinja2  better.jinja2  page2.jinja2
templates/auth/: form.jinja2  success.jinja2
